# image_translation_exercise

./: README.md  excercise_orig.ipynb  exercise.py  flake.nix  meta.json  pyproject.toml  upload_zenodo.sh
image_translation/: data.py  feature_map.py  models.py  part1_inspection_widget.py  part2_smoothing_cli.py  part2_smoothing_script.py  precache_datasets.py
